update_parts_database_yml - pip install humanize dependency of jlcparts_db_convert.py

--- a/.github/workflows/update_parts_database.yml
+++ b/.github/workflows/update_parts_database.yml
@@ -16,6 +16,9 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y --no-install-recommends \
             python3 python3-pip wget zip unzip p7zip-full
+      - name: Install python dependencies
+        run: |
+          pip install humanize
       - name: Update database
         run: |
           set -x
