feat: Change plugin identifier and name

--- a/addons/jlcpcb_tools_plugin/manifest.json
+++ b/addons/jlcpcb_tools_plugin/manifest.json
@@ -3,7 +3,7 @@
   "name": "KiCAD JLCPCB Tools Plugin",
   "description": "A JLCPCB integration addon for KiCAD",
   "description_full": "This plugin allows you to search the JLCPCB parts database, assign LCSC article numbers to your parts, generate production files for JLCPCB and much more.",
-  "identifier": "com.github.bouni.kicad-jlcpcb-tools",
+  "identifier": "com.github.bouni.kicad-jlcpcb-tools-plugin",
   "type": "plugin",
   "author": {
       "name": "Bouni",
