lint: fix pylint warnings

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,6 +38,7 @@ disable = [
     "too-many-boolean-expressions",
     "invalid-name",
     "duplicate-code",
+    "unspecified-encoding",
 ]
 
 [tool.pylint.FORMAT]
