--- a/pyproject.toml
+++ b/pyproject.toml
@@ -99,6 +99,7 @@ select = [
 
 ignore = [
     "C901",  # too complex
+    "D107",  # Ignore missing Docstring in __init__ methods
     "D202",  # No blank lines allowed after function docstring
     "D203",  # 1 blank line required before class docstring
     "D213",  # Multi-line docstring summary should start at the second line
@@ -139,6 +140,9 @@ known-first-party = [
 ]
 combine-as-imports = true
 split-on-trailing-comma = false
+
+[tool.ruff.per-file-ignores]
+"jlcparts_db_convert.py" = ["T201"]
 
 [tool.ruff.mccabe]
 max-complexity = 25
