--- a/.github/workflows/update_parts_database.yml
+++ b/.github/workflows/update_parts_database.yml
@@ -54,7 +54,7 @@ jobs:
     runs-on: ubuntu-20.04
     needs: build_and_update
     permissions:
-      contents: read
+      contents: write
       pages: write
       id-token: write
     # Deploy to the github-pages environment
