--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -4,12 +4,16 @@ repos:
     rev: v0.11.4
     hooks:
       - id: ruff
-        args: [ --fix ]
+        args:
+          - --fix
+          - --extend-exclude=lib
       - id: ruff-format
+        exclude: '(^|/)lib'
   - repo: https://github.com/asottile/pyupgrade
     rev: v3.19.1
     hooks:
       - id: pyupgrade
+        exclude: ^.lib/
   - repo: https://github.com/igorshubovych/markdownlint-cli
     rev: v0.44.0
     hooks:
