Fix the test workflow.
The KiCad stuff isn't available under pytest, so it can choke the
tests if they're invoked from the root directory.

The tests.yaml file changes - the tests were moved out of the
main script into the individual test_* files in common, it doesn't
have its own tests any more, so moved the tests to check in common
instead.

I missed merging the translate tests after fixing #682.

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -11,11 +11,13 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-      - name: Install dependencies
-        run: pip install pytest humanize
-      - name: Run db_build tests
-        working-directory: db_build
-        run: pytest jlcparts_db_convert.py
+      - name: Install pytest
+        run: pip install pytest
+      - name: Install python packages
+        run: pip install .
       - name: Run core tests
         working-directory: core
         run: pytest version.py
+      - name: Run common tests
+        working-directory: common
+        run: pytest
